# credit-card-airflow-example

./: README.md  main.py  pyproject.toml
models/: main.py
tasks/: main_dag_functions.py
tasks/groups/: aws_task_group.py  data_calculations.py  sql_task_group.py
